@@ -68,6 +68,7 @@ float:none;
 max-width:100%;
 width: auto;
 max-height: 100%;
+height: 100%;
 
 margin:auto;
 
